<resources>
    <string name="forbidden_required_role">Forbidden. Required role: %1$s</string>
    <string name="drawer_menu_staff">EVENT CONTROL</string>
    <string name="drawer_menu_race_control">RACE CONTROL</string>
    <string name="drawer_menu_race_access">RACE ACCESS</string>
    <string name="drawer_menu_staff_briefing">Briefing</string>
    <string name="drawer_menu_staff_pre_scrutineering">Pre-scrutineering</string>
    <string name="drawer_menu_staff_users_management">USER MANAGEMENT</string>
    <string name="drawer_menu_staff_users_management_team_members">Team members</string>
    <string name="drawer_menu_staff_users_management_esos">Esos</string>
    <string name="drawer_menu_staff_users_management_volunteers">Volunteers</string>
    <string name="drawer_menu_participant_myTeam">My team</string>
    <string name="drawer_menu_participant_teamMembers">Team members</string>
    <string name="drawer_menu_participant_status">Status</string>
    <string name="drawer_menu_common_fss_status">FSS status</string>
    <string name="drawer_menu_staff_dynamic_events">Dynamic events</string>
    <string name="drawer_menu_staff_practice_track">Practice track</string>
    <string name="drawer_menu_staff_skidpad">Skidpad</string>
    <string name="drawer_menu_staff_acceleration">Acceleration</string>
    <string name="drawer_menu_staff_autocross">Autocross</string>
    <string name="drawer_menu_staff_endurance_efficiency">Endurance</string>
    <string name="drawer_menu_common_scoring">Scoring</string>
    <string name="drawer_menu_common_settings">Settings</string>
    <string name="drawer_menu_common_logout">Logout</string>
    <string name="drawer_menu_staff_statistics">Statistics</string>
    <string name="drawer_menu_teams">Teams</string>
    <string name="drawer_menu_cone_control">CONE CONTROL</string>
    <string name="drawer_menu_admin_operations_title">ADMIN OPERATIONS</string>
    <string name="drawer_menu_admin_operations">Admin operations</string>
    <string name="login_activity_forgot_password"><u>Forgot password?</u></string>
    <string name="login_activity_mail">Mail</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_login">LOGIN</string>
    <string name="login_activity_user_not_found">User not found</string>
    <string name="login_business_error_login_with_mail">Error doing login with mail</string>
    <string name="login_business_error_reset_password">Error while reset password</string>
    <string name="login_business_info_login">Login successfully done</string>
    <string name="login_business_info_reset">An email has been sent to you in order to reset the password</string>
    <string name="login_business_email_mandatory">Enter your mail account in order to send you the password recover mail</string>
    <string name="login_business_create_user_success">User created successfully to do login</string>
    <string name="login_business_create_user_failure">Error creating user to login</string>
    <string name="login_business_create_user_email_existing">The email address is already in use by another account.</string>
    <string name="login_activity_full_name">Full name</string>
    <string name="login_activity_re_password">Re-password</string>
    <string name="login_activity_register">REGISTER</string>
    <string name="login_activity_not_registered">Don\'t have an account?</string>
    <string name="login_activity_register_link">Register</string>
    <string name="login_activity_user_not_activated">User created successfully but not activated, please contact an official.</string>
    <string name="login_Activity_mandatory_field">This field is mandatory</string>
    <string name="login_Activity_password_not_match">The password is different</string>
    <string name="login_Activity_min_password_six">Min. 6 characters</string>
    <string name="activity_team_members_title">Team members</string>
    <string name="activity_team_members_detail_title">Team member</string>
    <string name="team_member_get_by_nfc_error">Error getting the team member by this Tag</string>
    <string name="team_member_get_by_nfc_not_existing">Could not get the team member by this Tag</string>
    <string name="team_member_get_by_nfc_info">Team member retrieved by NFC successfully</string>
    <string name="team_member_get_all_error">Error retrieving all team members</string>
    <string name="team_member_get_teams_error">Error retrieving all teams</string>
    <string name="team_member_get_all_info">Team member retrieved successfully</string>
    <string name="team_member_create_error">Error creating team member</string>
    <string name="team_member_create_info">Team member created successfully</string>
    <string name="team_member_get_by_mail_error">Error retrieving team member by mail</string>
    <string name="team_member_get_by_mail_info">Team member retrieved by mail successfully</string>
    <string name="team_member_get_by_id_error">Error retrieving team member by ID</string>
    <string name="team_member_get_by_id_info">Team member retrieved by ID successfully</string>
    <string name="team_member_delete_all_error">Error deleting all team members</string>
    <string name="team_member_delete_all_info">Team member deleted successfully</string>
    <string name="team_member_get_registered_by_team_info">Registered team members by team retrieved successfully</string>
    <string name="team_member_get_registered_by_team_error">Error retrieving team members by team</string>
    <string name="team_member_get_user_roles_error">Error retrieving team member roles</string>
    <string name="team_member_get_user_roles_info">Team member roles retrieved successfully</string>
    <string name="team_member_error_max_6_drivers">Unable to register more drivers. 6 max.</string>
    <string name="team_member_info_registered">Team member successfully registered</string>
    <string name="team_member_error_registering">Error registering team member</string>
    <string name="team_member_error_tag_already_used">TAG is already registered by %1$s</string>
    <string name="team_member_error_creating_user">Error creating team member</string>
    <string name="team_member_update_info">Team member updated successfully</string>
    <string name="team_member_update_error">Error updating team member</string>
    <string name="team_member_dialog_roles">Roles</string>
    <string name="team_member_edit_roles_dialog_title">Edit team member</string>
    <string name="team_member_edit_roles_dialog_positive">Edit</string>
    <string name="team_member_error_photo_mandatory">Please take a photo to the team member</string>
    <string name="team_member_error_documents_mandatory">Please check the team member documents</string>
    <string name="team_member_dialog_filter_button">Filter</string>
    <string name="team_member_dialog_filter_title">Filter team members</string>
    <string name="activity_volunteers_detail_title">Volunteer</string>
    <string name="activity_volunteers_title">Volunteers</string>
    <string name="dialog_create_user_title">Create user</string>
    <string name="dialog_create_user_button_create">Create</string>
    <string name="dialog_create_user_button_cancel">Cancel</string>
    <string name="dialog_create_user_field_name">Name</string>
    <string name="dialog_create_user_field_mail">Mail</string>
    <string name="dialog_create_user_field_team">Team</string>
    <string name="dialog_create_user_field_role">Role</string>
    <string name="dialog_create_user_error_field">Mandatory field</string>
    <string name="dialog_edit_user_title">Edit user</string>
    <string name="dialog_edit_user_button_edit">Edit</string>
    <string name="dialog_edit_user_button_cancel">Cancel</string>
    <string name="dialog_assign_device_title">Assign %1$s</string>
    <string name="dialog_assign_device_error_wrong_number">Wrong number</string>
    <string name="dialog_assign_device_number">Number</string>
    <string name="dialog_assign_device_number_hint">Type the device number</string>
    <string name="dialog_return_device_message">Are you sure you want to return the selected device?</string>
    <string name="dialog_return_device_title">Return %1$s</string>
    <string name="dialog_return_device_return">Return</string>
    <string name="dialog_assign_device_assign">Assign</string>
    <string name="briefing_activity_title">Briefing control</string>
    <string name="briefing_activity_teams_label">Teams</string>
    <string name="briefing_activity_dialog_confirm_register_title">User confirmation</string>
    <string name="briefing_activity_dialog_confirm_button_confirm">Confirm</string>
    <string name="briefing_activity_dialog_confirm_button_cancel">Cancel</string>
    <string name="briefing_messages_retrieve_registers_error">Error retrieving briefing registers</string>
    <string name="briefing_messages_retrieve_registers_info">Registers retrieved properly</string>
    <string name="briefing_messages_create_registers_error">Error creating briefing register</string>
    <string name="briefing_messages_create_registers_info">Register created properly</string>
    <string name="briefing_messages_delete_register_error">Error deleting briefing register</string>
    <string name="briefing_messages_delete_register_info">Register deleted properly</string>
    <string name="briefing_messages_parsing_dates_error">Error parsing dates</string>
    <string name="general_activity_dialog_loading_title">Loading...</string>
    <string name="competition_day_wed">21/08/2019</string>
    <string name="competition_day_thu">22/08/2019</string>
    <string name="competition_day_fri">23/08/2019</string>
    <string name="competition_day_sat">24/08/2019</string>
    <string name="competition_day_sun">25/08/2019</string>
    <string name="default_image_url">https://lh3.googleusercontent.com/-cXXaVVq8nMM/AAAAAAAAAAI/AAAAAAAAAKI/_Y1WfBiSnRI/photo.jpg?sz=150</string>
    <string name="acceleration_activity_title">Acceleration control</string>
    <string name="acceleration_activity_teams_label">Team</string>
    <string name="acceleration_activity_dialog_confirm_register_title">User confirmation</string>
    <string name="acceleration_activity_dialog_confirm_button_confirm">Confirm</string>
    <string name="acceleration_activity_dialog_confirm_button_cancel">Cancel</string>
    <string name="acceleration_activity_dialog_confirm_error_car">Please select a car</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are you sure you want to exit?</string>
    <string name="exit_dialog_positive_button">Exit</string>
    <string name="exit_dialog_negative_button">Cancel</string>
    <string name="app_car_type_empty">Select a car</string>
    <string name="app_car_type_electric">Electric</string>
    <string name="app_car_type_combustion">Combustion</string>
    <string name="app_car_type_autonomous">Autonomous</string>
    <string name="dynamic_event_filtering_dialog_title">Filter results</string>
    <string name="dynamic_event_filtering_dialog_filter_button">Filter</string>
    <string name="dynamic_event_filtering_dialog_cancel_button">Cancel</string>
    <string name="dynamic_event_delete_register_dialog_title">Delete register</string>
    <string name="dynamic_event_delete_register_dialog_message">Are you sure you want to delete the selected register?</string>
    <string name="dynamic_event_delete_register_dialog_delete_button">Delete</string>
    <string name="dynamic_event_delete_register_dialog_cancel_button">Cancel</string>
    <string name="statistics_activity_text">Click a button to start the export process: </string>
    <string name="rc_welcome_button_electric">Electric</string>
    <string name="rc_welcome_button_combustion">Combustion</string>
    <string name="rc_welcome_button_final">Final</string>
</resources>