<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/navHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/drawer_background" />

    <TextView
        android:id="@+id/drawerItemBriefing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_briefing"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_teams"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Race Access"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/drawerItemRAPracticeTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_practice_track"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRASkidpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_skidpad"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRAAcceleration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_acceleration"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRAAutoCross"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_autocross"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRAEndurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_endurance_efficiency"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Race Control"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/drawerItemRCSkidpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_skidpad"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRCAutocross"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_autocross"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemRCEndurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_endurance_efficiency"
        android:textSize="32sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cone Control"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/drawerItemCCSkidpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_skidpad"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemCCAutocross"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_autocross"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemCCEndurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_endurance_efficiency"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_users_management_volunteers"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemTeamMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_staff_users_management_team_members"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/drawerItemLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/drawer_menu_common_logout"
        android:textSize="32sp" />
</LinearLayout>