<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.view.screen.timeline.TimelineActivity">

    <include layout="@layout/activity_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/statistics_activity_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exportUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary_light"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="Users"/>

            <Button
                android:id="@+id/exportBriefing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:backgroundTint="@color/primary_light"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_briefing"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_light"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>


        <Button
            android:id="@+id/exportPreScrutineering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/activity_prescrutineering_rounded_button"
            android:text="@string/drawer_menu_staff_pre_scrutineering"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_light"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/exportPracticeTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_practice_track"/>


            <Button
                android:id="@+id/exportSkidPad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/exportPracticeTrack"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_skidpad"/>


            <Button
                android:id="@+id/exportAcceleration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_below="@id/exportPracticeTrack"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_acceleration"/>


            <Button
                android:id="@+id/exportAutocross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/exportAcceleration"
                android:layout_alignBaseline="@id/exportAcceleration"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_autocross"/>


            <Button
                android:id="@+id/exportEndurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_light"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_below="@id/exportAcceleration"
                android:background="@drawable/activity_prescrutineering_rounded_button"
                android:text="@string/drawer_menu_staff_endurance_efficiency"/>

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
