<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".mvp.view.activity.teammember.TeamMemberActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/dialog_create_user_field_name"/>

    <EditText
        android:id="@+id/create_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="16dp"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:hint="Type name"
        android:background="@drawable/activity_user_list_filter_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="@string/dialog_create_user_field_mail"/>

    <EditText
        android:id="@+id/create_user_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="16dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="Type mail"
        android:background="@drawable/activity_user_list_filter_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/dialog_create_user_field_team"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/dialog_create_user_field_role"/>

    <Spinner
        android:id="@+id/create_user_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        />

</LinearLayout>
